--- a/DoctorsLog/MainWindow.xaml
+++ b/DoctorsLog/MainWindow.xaml
@@ -250,7 +250,7 @@
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal" Margin="0">
-                                                    <Button Content="📋" Background="#6A9B9B" Width="30"  Padding="0"  Margin="0,0,5,0"/>
+                                                    <Button Content="📋" Background="#6A9B9B" Width="30"  Padding="0"  Margin="0,0,5,0" Click="Button_Click"/>
                                                     <Button Content="✏️" Background="#ccb50a" Width="30" Padding="0" Margin="0,0,5,0" Click="BtnEditPatientInfo_Click"/>
                                                     <Button Content="🗑" Background="#F44336" Width="30"  Padding="0" Margin="0" Click="BtnDelete_Click"/>
                                                 </StackPanel>
