--- a/DoctorsLog/App.xaml
+++ b/DoctorsLog/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="DoctorsLog.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:DoctorsLog"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:DoctorsLog">
     <Application.Resources>
         <!-- Material Design style va ranglar -->
         <ResourceDictionary>
