--- a/DoctorsLog/Windows/MainWindow.xaml
+++ b/DoctorsLog/Windows/MainWindow.xaml
@@ -16,7 +16,24 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Border Grid.Row="0" Background="#8BA8C8" />
+        <Border Grid.Row="0" Background="#8BA8C8" Padding="10">
+            <DockPanel>
+                <!-- Chap tomonda logotip yoki bo'sh joy -->
+                <TextBlock
+                   FontSize="18"
+                   FontWeight="Bold"
+                   Foreground="White"
+                   DockPanel.Dock="Left"/>
+
+                <!-- O'ng tomonda FullName -->
+                <TextBlock Text="{Binding OwnerFullName}"
+                   FontSize="14"
+                   Foreground="White"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Right"
+                   DockPanel.Dock="Right"/>
+            </DockPanel>
+        </Border>
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
