--- a/DoctorsLog/Windows/ActivationWindow.xaml
+++ b/DoctorsLog/Windows/ActivationWindow.xaml
@@ -6,8 +6,13 @@
         xmlns:local="clr-namespace:DoctorsLog.Windows"
         xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Aktivatsiya" Height="350" Width="500"
-        WindowStartupLocation="CenterScreen">
+        Title="Aktivatsiya"
+        Height="350"
+        Width="500"
+        WindowStartupLocation="CenterScreen"
+        Topmost="True"
+        ResizeMode="NoResize"
+        WindowStyle="SingleBorderWindow">
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
